Fix reference leaks for GInitiallyUnowned objects

References were leaked for GInitiallyUnowned objects which got their
wrappers created several times, because someone else holds reference
on it and it got out of python scope at some point.

https://bugzilla.gnome.org/show_bug.cgi?id=639949